--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@ a {
   border-width: 1px;
   border-color: red;
   border-style: solid;
-  background: #FF4500;
+  background: #c0c0c0;
 }
 
 #.my_ul li:hover{
